app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deployment
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one-hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: app-one-service
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort:  8081
  type: LoadBalancer
