app-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deployment
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two-hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080


---

apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 80
      targetPort:  8080
  type: LoadBalancer
