app-one-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-admission-webhook: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app-one-service
            port:
              number: 80
